# TMK-SH

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.zig
.github/workflows/: build.yaml
docs/: lexer.md  parser.md
includes/: assert.hpp  ast.hpp  grammar.hpp  lexer.hpp  logger.hpp  parser.hpp  print.hpp  reader.hpp  shell.hpp  stdin_reader.hpp  util.hpp
includes/executor/: executor.hpp
includes/grammar/: grammar_util.hpp  rule.hpp  rule_producer.hpp
includes/grammar/rules/: and_or.hpp  empty.hpp  list_rule.hpp  separator_op.hpp
includes/interfaces/: provider.hpp
includes/lexer/: lexer.hpp  lexer_state.hpp  line_char_provider.hpp  line_reader_state.hpp  state_handler.hpp  token.hpp  token_parser.hpp  token_provider.hpp
includes/lexer/state_handlers/: double_quote_state_handler.hpp
includes/rules/: and_or.hpp  list_rule.hpp  separator_op.hpp
includes/shell/: assert.hpp  ast.hpp  environment.hpp  exception.hpp  global_environment.hpp  grammar.hpp  logger.hpp  parser.hpp  print.hpp  shell_environment.hpp  stdin_reader.hpp  util.hpp
includes/shell/environments/: global_environment.hpp  shell_environment.hpp  singleton_shell_environment.hpp
includes/shell/error/: error.hpp  recoverable_exception.hpp  syntax_error.hpp
includes/shell/executor/: builtins.hpp  executor.hpp
includes/shell/expansion/: quote_removal.hpp
includes/shell/grammar/: grammar_util.hpp  list.hpp  rule.hpp
includes/shell/grammar/rules/: and_or.hpp  assignment_word.hpp  command_name.hpp  command_prefix.hpp  command_suffix.hpp  command_word.hpp  filename.hpp  here_end.hpp  io_file.hpp  (+6 more)
includes/shell/interfaces/: environment.hpp  provider.hpp  reader.hpp
includes/shell/lexer/: lexer.hpp  line_char_provider.hpp  reader_char_provider.hpp  token.hpp  token_provider.hpp
includes/shell/rules/: and_or.hpp  list_rule.hpp  separator_op.hpp
includes/shell/utility/: characters.hpp  split.hpp  types.hpp
lib/: CMakeLists.txt  assert.cpp  ast.cpp  environment.cpp  exception.cpp  global_environment.cpp  lexer.cpp  line_char_provider.cpp  logger.cpp  parser.cpp  shell_environment.cpp  stdin_reader.cpp  token.cpp
lib/environments/: CMakeLists.txt  global_environment.cpp  shell_environment.cpp  singleton_shell_environment.cpp
lib/error/: CMakeLists.txt  syntax_error.cpp
lib/executor/: CMakeLists.txt  builtin.cpp  command.cpp  executor.cpp  separator_op.cpp
lib/executor/builtins/: CMakeLists.txt  echo.cpp  exit.cpp  export.cpp  getenv.cpp  set.cpp  unset.cpp
lib/expansion/: CMakeLists.txt  quote_removal.cpp
lib/grammar/: CMakeLists.txt  list.cpp  rule.cpp
lib/grammar/rules/: CMakeLists.txt  and_or.cpp  assignment_word.cpp  command_name.cpp  command_prefix.cpp  command_suffix.cpp  command_word.cpp  filename.cpp  here_end.cpp  io_file.cpp  io_here.cpp  io_redirect.cpp  list_rule.cpp  separator_op.cpp  simple_command.cpp  word.cpp
lib/lexer/: CMakeLists.txt  double_quote_state_handler.cpp  lexer.cpp  line_char_provider.cpp  reader_char_provider.cpp  token.cpp  token_provider.cpp
lib/rules/: CMakeLists.txt  and_or.cpp  list_rule.cpp  separator_op.cpp
lib/utility/: CMakeLists.txt  split.cpp
src/: CMakeLists.txt  main.cpp  main.zig
src/io/: LineReader.zig  line_reader.zig
src/parser/: lexer.zig  parser.zig
test/: CMakeLists.txt  test.cpp  test_helpers.cpp
test/includes/: test_helpers.hpp
test/lexer/: CMakeLists.txt  basic_ls.cpp  stdin_lexer.cpp
test/parser/: CMakeLists.txt  test_io_number.cpp
